--- a/index.html
+++ b/index.html
@@ -11,19 +11,7 @@
 
 <body>
   <main>
-    <div class="food">
-      <div class="food-item">
-        <img src="https://target.scene7.com/is/image/Target/51591776?wid=400&hei=400&fmt=pjpeg" alt="">
-        <h3>PRICE PLACEHOLDER</h3>
-      </div>
-      <div class="food-item">
-        <img src="https://pbs.twimg.com/profile_images/824647153721106432/gwLIQxqy_400x400.jpg" alt="">
-        <h3>PRICE PLACEHOLDER</h3>
-      </div>
-      <div class="food-item">
-        <img src="http://www.mountaindew.com/assets/content/38195/20881/21892-grew-dew-product.png" alt="">
-        <h3>PRICE PLACEHOLDER</h3>
-      </div>
+    <div id="food">
     </div>
     <div class="money">
       <button onclick="app.controllers.vendController.addMoney('quarter')">$0.25</button>
