--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
   <main>
     <div id="food">
+      <button onclick=""></button>
+      <button onclick=""></button>
+      <button onclick=""></button>
     </div>
     <div class="money">
       <button onclick="app.controllers.vendController.addMoney('quarter')">$0.25</button>
