--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <span id="total">0.00</span>
       </p>
     </div>
+
+
+    <div>
+      
+    </div>
   </main>
 
   <script src="main.js" type="module">
